Performed a number of fixes on views (including Skills on mobile)
- Fixed profile menu display (fixed image, button and Skills display)
- In Loader.js, fixed methods calling eachother (now they queue each-otnerh, not start all-at-once).
- Fixed 'no courses' handling (now gif appears)
- Fixed ugly Skills display on Mobile. Now the skills (from med to small devices) are displayed in the left menu
- Fixed arena half-colored div display
- Fixed site title display (overlay on mouse hover was outbounds)

--- a/assets/styles/game/game.css
+++ b/assets/styles/game/game.css
@@ -1,3 +1,12 @@
+
+.profile-btn-wrapped {
+    font-size: 14px !important;
+    height: auto !important;
+    word-wrap: normal;
+    line-height: 17px !important;
+    text-align: right;
+}
+
 .animated {
   -webkit-animation-name: buttonPulse;
   -webkit-animation-duration: 2s;
@@ -41,6 +50,15 @@
 .imagewrap {
   display: inline-block;
   position: relative;
+}
+
+.card-image {
+  padding-top: 10px !important;
+}
+
+.container {
+    padding-bottom: 10px !important;
+    padding-top: 10px !important;
 }
 
 .buyButton {
